[package]
name = "poly_scan"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
colored = "2.0"
comfy-table = "7.0"
indicatif = "0.17"
anyhow = "1.0"
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
